--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 <head>
 	<title>Mine-Zone - Official Website</title>
-	<meta name="description" content="Mine-Zone is a revolutionary Minecraft server. You can join with the IP 'play.mine-zone.us'.">
+	<meta name="description" content="Mine-Zone is a Dupe Factions Minecraft server. You can join with the IP 'play.mine-zone.us'.">
 	<meta name="keywords" content="Mine-Zone, Mine-Zone.com, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
@@ -26,7 +26,7 @@
 				<ul class="nav">
 					<li><a href="./">Home</a></li>
 					<li><a href="#">Forums</a></li>
-					<li><a href="#">Store</a></li>
+					<li><a href="http://shop.mine-zone.us/">Store</a></li>
 					<li><a href="./staff.html">Staff</a></li>
 				</ul>
 			</div>
@@ -41,22 +41,22 @@
 
 		<div class="main-content">
 			<h2>About Us</h2>
-			<p class="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis semper mattis eros non ultricies. Nam hendrerit ligula eu felis laoreet venenatis. Pellentesque vulputate elementum pretium. Nullam at blandit magna, sit amet tincidunt metus. In hendrerit mauris id augue tristique gravida et at ante. Sed maximus lacus vel sem tristique, id luctus risus blandit.</p>
+			<p class="about-text">We are a dupe factions server, with many cool and unique features. We allow duping. Use our custom /dupe command and dupe anything you can think of! Come join us! play.mine-zone.us</p>
 		</div>
 
 		<div class="gradient">
 			<div class="flex-container">
 				<div class="split">
 					<a href="#"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem. Donec a mollis diam, posuere venenatis lorem. Vestibulum sit amet risus eros. Nam commodo tortor a nunc tempor, sit amet auctor purus elementum.</p>
+					<p>This is a feature which will come in the near future! Here you can engage more in our community!</p>
 				</div>
 				<div class="split">
-					<a href="#"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem. Donec a mollis diam, posuere venenatis lorem. Vestibulum sit amet risus eros. Nam commodo tortor a nunc tempor, sit amet auctor purus elementum.</p>
+					<a href="http://shop.mine-zone.us"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
+					<p>Purchasing ranks from our store helps the server out a lot. Make sure to buy items from our store to support Mine-Zone!</p>
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem. Donec a mollis diam, posuere venenatis lorem. Vestibulum sit amet risus eros. Vote for us below!</p>
+					<p>Voting for Mine-Zone, helps us grow as a family. Not only supporting Mine-Zone, you get an reward back. Check in-game the rewards! Vote for us below!</p>
 				</div>
 			</div>
 		</div>
@@ -86,8 +86,6 @@
 
 		<footer>
 			<p>Copyright &copy; Mine-Zone 2017</p>
-			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Created <a href="https://bybilly.uk/" target="_blank">ByBilly</a></p>
 		</footer>
 
 	</div>
