--- a/staff.html
+++ b/staff.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MyServer - Staff Page</title>
+	<title>Mine-zone - Staff Page</title>
 	<meta name="description" content="MyServer staff.">
 	<meta name="keywords" content="MyServer, MyServer.com, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
 				<ul class="nav">
 					<li><a href="./">Home</a></li>
 					<li><a href="#">Forums</a></li>
-					<li><a href="#">Store</a></li>
+					<li><a href="http://shop.mine-zone.us/">Store</a></li>
 					<li><a href="./staff.html">Staff</a></li>
 				</ul>
 			</div>
@@ -35,62 +35,37 @@
 					<h1 class="fade">The Staff Team</h1>
 					<p>Here is where you can view our staff team!</p>
 				</div>
-				<div class="prev-epr">
-					<h2>Our Skills</h2>
-
-					<div class="meter-container">
-						<p>Staff Management</p>
-						<div class="meter ma">
-							<div class="skills">78%</div>
-						</div>
-					</div>
-					<div class="meter-container">
-						<p>Java Development</p>
-						<div class="meter mb">
-							<div class="skills">96%</div>
-						</div>
-					</div>
-					<div class="meter-container">
-						<p>Web Development</p>
-						<div class="meter mc">
-							<div class="skills">98%</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
 			<div class="staff">
-				<h2>Our Team</h2>
+				<h2>Our Management Team</h2>
 				<div class="staff-team">
 					<div>
-						<h3>BlexieKing</h3>
+						<h3>Artification</h3>
 						<div class="owner">Owner</div>
-						<img src="img/blexieking.png">
+						<img src="img/artification.png">
 					</div>
 
 					<div>
-						<h3>Bae4lyfe</h3>
+						<h3>Axsassin</h3>
 						<div class="owner">Owner</div>
-						<img src="img/bae4lyfe.png">
+						<img src="img/Axsassin.png">
 					</div>
 
 					<div>
-						<h3>TheSlimyBro</h3>
-						<div class="manager">Manager</div>
-						<img src="img/theslimybro.png">
+						<h3>SirUntouchable</h3>
+						<div class="manager">Staff Manager</div>
+						<img src="img/siruntouchable.png">
 					</div>
 
 					<div>
-						<h3>Ryjay</h3>
-						<div class="admin">Admin</div>
-						<img src="img/ryjay.png">
+						<h3>Valid</h3>
+						<div class="operator">operator</div>
+						<img src="img/valid.png">
 					</div>
 
 					<div>
-						<h3>LeanAndRekt</h3>
-						<div class="admin">Admin</div>
-						<img src="img/leanandrekt.png">
+						<h3>In Need!</h3>
+						<div class="operator">Operator</div>
+						<img src="img/mhf_question.png">
 					</div>
 				</div>
 			</div>
