--- a/staff.html
+++ b/staff.html
@@ -1,9 +1,12 @@
+<!-- Proudly created by BlexieKing -->
+<!-- https://www.spigotmc.org/members/blexieking.168027 -->
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mine-zone - Staff Page</title>
-	<meta name="description" content="MyServer staff.">
-	<meta name="keywords" content="MyServer, MyServer.com, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
+	<title>Mine-Zone - Staff Page</title>
+	<meta name="description" content="Mine-Zone staff.">
+	<meta name="keywords" content="Mine-Zone, Mine-Zone.com, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/stylesheet.css">
@@ -17,7 +20,7 @@
 				<div class="logo">
 					<!-- In the img folder, upload your logo. -->
 					<!-- Make sure to name it 'logo.png'! -->
-					<a href="/"><img src="img/logo.png" alt="MyServer logo"></a>
+					<a href="/"><img src="img/logo.png" alt="Mine-Zone logo"></a>
 				</div>
 
 				<ul class="nav">
@@ -32,9 +35,34 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">The Staff Team</h1>
-					<p>Here is where you can view our staff team!</p>
+					<h1 class="fade">The Management Team</h1>
+					<p>Here you can view our outstanding management team!</p>
 				</div>
+				<div class="prev-epr">
+					<h2>Our Skills</h2>
+
+					<div class="meter-container">
+						<p>Staff Management</p>
+						<div class="meter ma">
+							<div class="skills">100%</div>
+						</div>
+					</div>
+					<div class="meter-container">
+						<p>Java Development</p>
+						<div class="meter mb">
+							<div class="skills">90%</div>
+						</div>
+					</div>
+					<div class="meter-container">
+						<p>Web Development</p>
+						<div class="meter mc">
+							<div class="skills">100%</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
 			<div class="staff">
 				<h2>Our Management Team</h2>
 				<div class="staff-team">
@@ -53,18 +81,18 @@
 					<div>
 						<h3>SirUntouchable</h3>
 						<div class="manager">Staff Manager</div>
-						<img src="img/siruntouchable.png">
+						<img src="img/Siruntouchable.png">
 					</div>
 
 					<div>
 						<h3>Valid</h3>
-						<div class="operator">operator</div>
+						<div class="admin">Operator</div>
 						<img src="img/valid.png">
 					</div>
 
 					<div>
-						<h3>In Need!</h3>
-						<div class="operator">Operator</div>
+						<h3>In Need</h3>
+						<div class="admin">Operator</div>
 						<img src="img/mhf_question.png">
 					</div>
 				</div>
