--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<ul class="nav">
 					<li><a href="./">Home</a></li>
-					<li><a href="#">Forums</a></li>
+					<li><a href="http://forums.mine-zone.us">Forums</a></li>
 					<li><a href="http://shop.mine-zone.us/">Store</a></li>
 					<li><a href="./staff.html">Staff</a></li>
 				</ul>
@@ -47,7 +47,7 @@
 		<div class="gradient">
 			<div class="flex-container">
 				<div class="split">
-					<a href="#"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
+					<a href="http://forums.mine-zone.us"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
 					<p>This is a feature which will come in the near future! Here you can engage more in our community!</p>
 				</div>
 				<div class="split">
