--- a/staff.html
+++ b/staff.html
@@ -25,7 +25,7 @@
 
 				<ul class="nav">
 					<li><a href="./">Home</a></li>
-					<li><a href="#">Forums</a></li>
+					<li><a href="http://forums.mine-zone.us">Forums</a></li>
 					<li><a href="http://shop.mine-zone.us/">Store</a></li>
 					<li><a href="./staff.html">Staff</a></li>
 				</ul>
