--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a href="./">Home</a></li>
 					<li><a href="http://forums.mine-zone.us">Forums</a></li>
 					<li><a href="http://shop.mine-zone.us/">Store</a></li>
-					<li><a href="http://staff.mine-zone.us/">Staff</a></li>
+					<li><a href="http://staff.mine-zone.us/staff.html">Staff</a></li>
 				</ul>
 			</div>
 			<h1 class="animate">Welcome to the official Mine-Zone website!</h1>
@@ -56,7 +56,7 @@
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Voting for Mine-Zone, helps us grow as a family. Not only supporting Mine-Zone, you get an reward back. Check in-game the rewards! Vote for us below!</p>
+					<p>Voting for Mine-Zone, helps us grow as a family. Not only supporting Mine-Zone, you get an reward back. Check in-game for the rewards! Vote for us below!</p>
 				</div>
 			</div>
 		</div>
