--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a href="./">Home</a></li>
 					<li><a href="http://forums.mine-zone.us">Forums</a></li>
 					<li><a href="http://shop.mine-zone.us/">Store</a></li>
-					<li><a href="http://staff.mine-zone.us/staff.html">Staff</a></li>
+					<li><a href="http://staff.mine-zone.us/">Staff</a></li>
 				</ul>
 			</div>
 			<h1 class="animate">Welcome to the official Mine-Zone website!</h1>
