--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<!-- Proudly created by BlexieKing -->
-<!-- https://www.spigotmc.org/members/blexieking.168027 -->
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mine-Zone - Official Website</title>
-	<meta name="description" content="Mine-Zone is a Dupe Factions Minecraft server. You can join with the IP 'play.mine-zone.us'.">
+	<title>Mine-Zone - Staff Page</title>
+	<meta name="description" content="Mine-Zone staff.">
 	<meta name="keywords" content="Mine-Zone, Mine-Zone.com, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/home.css">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300,regular,700,900' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/staff.css">
 </head>
 <body>
 	<div class="container">
@@ -20,67 +17,70 @@
 				<div class="logo">
 					<!-- In the img folder, upload your logo. -->
 					<!-- Make sure to name it 'logo.png'! -->
-					<a href="/"><img src="img/logo.png" alt="MyServer logo"></a>
+					<a href="/"><img src="img/logo.png" alt="Mine-Zone logo"></a>
 				</div>
 
 				<ul class="nav">
-					<li><a href="./">Home</a></li>
+					<li><a href="http://mine-zone.us">Home</a></li>
 					<li><a href="http://forums.mine-zone.us">Forums</a></li>
 					<li><a href="http://shop.mine-zone.us/">Store</a></li>
-					<li><a href="http://staff.mine-zone.us/">Staff</a></li>
-					<li><a href="http://rules.mine-zone.us/">Rules</a></li>
+					<li><a href="http://staff.mine-zone.us">Staff</a></li>
 				</ul>
-			</div>
-			<h1 class="animate">Welcome to the official Mine-Zone website!</h1>
-			<div class="playercount">
-				<!-- Replace play.flaremc.net with your IP address! -->
-				<!-- Make sure to do it for both examples below. -->
-				<p>Join <span data-playercounter-ip="play.mine-zone.us">
-				0</span> other players on <span>play.mine-zone.us</span></p>
 			</div>
 		</header>
 
 		<div class="main-content">
-			<h2>About Us</h2>
-			<p class="about-text">We are a dupe factions server, with many cool and unique features. We allow duping. Use our custom /dupe command and dupe anything you can think of! Come join us! play.mine-zone.us</p>
-		</div>
+			<div class="about-staff">
+				<div class="abt-epr">
+					<h1 class="fade">The Management Team</h1>
+					<p>Here you can view our outstanding management team!</p>
+				</div>
+			<div class="staff">
+				<h2>Our Management Team</h2>
+				<div class="staff-team">
+					<div>
+						<h3>Artification</h3>
+						<div class="owner">Owner</div>
+						<img src="img/artification.png">
+					</div>
 
-		<div class="gradient">
-			<div class="flex-container">
-				<div class="split">
-					<a href="http://forums.mine-zone.us"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
-					<p>This is a feature which will come in the near future! Here you can engage more in our community!</p>
-				</div>
-				<div class="split">
-					<a href="http://shop.mine-zone.us"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
-					<p>Purchasing ranks from our store helps the server out a lot. Make sure to buy items from our store to support Mine-Zone!</p>
-				</div>
-				<div class="split">
-					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Voting for Mine-Zone, helps us grow as a family. Not only supporting Mine-Zone, you get an reward back. Check in-game for the rewards! Vote for us below!</p>
-				</div>
-			</div>
-		</div>
+					<div>
+						<h3>SirUntouchable</h3>
+						<div class="manager">General Manager</div>
+						<img src="img/Siruntouchable.png">
+					</div>
 
-		<div class="vote-section">
-			<h2>Vote For Us</h2>
-			<p>Please consider voting for Mine-Zone using the links below! Not only does this benifit us massivly, but you also get rewards in-game.</p>
-			<div class="vote-container">
-				<div class="vote">
-					<h2>PlanetMinecraft.com</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
-				</div>
-				<div class="vote">
-					<h2>MinecraftServers.org</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
-				</div>
-				<div class="vote">
-					<h2>TopG.org</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
-				</div>
-				<div class="vote">
-					<h2>Minecraft-MP.com</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
+					<div>
+						<h3>Raidz_PvP</h3>
+						<div class="manager">Community & Service Manager</div>
+						<img src="img/Raidz_PvP_3D.png">
+					</div>
+
+					<div>
+						<h3>In Need</h3>
+						<p>Apply @ forums.mine-zone.us</p>
+						<div class="admin">Events Manager</div>
+						<img src="img/mhf_question.png">
+					</div>
+
+					<div>
+						<h3>BoyJamal</h3>
+						<div class="dev">Developer</div>
+						<img src="img/BoyJamal_3D.png">
+					</div>
+
+					<div>
+						<h3>MHG_Junkie</h3>
+						<div class="admin">Operator</div>
+						<img src="img/MHG_Junkie_3D.png">
+					</div>
+
+					<div>
+						<h3>This could be you!</h3>
+						<p>Apply @ forums.mine-zone.us</p>
+						<div class="admin">Operator</div>
+						<img src="img/mhf_question.png">
+					</div>
 				</div>
 			</div>
 		</div>
